--- a/index.Rmd
+++ b/index.Rmd
@@ -153,6 +153,7 @@ rmarkdown::render('LECTURE11.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('LECTURE12.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('LECTURE13.Rmd',rmarkdown::pdf_document())
 rmarkdown::render('LECTURE14.Rmd',rmarkdown::pdf_document())
+rmarkdown::render('LECTURE15.Rmd',rmarkdown::pdf_document())
 
 
 rmarkdown::render('PVA1_421.Rmd',rmarkdown::pdf_document())
