--- a/FINAL_PROJECTS.Rmd
+++ b/FINAL_PROJECTS.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final projects!"
 author: "NRES 470/670"
-date: "Spring, 2020"
+date: "Spring 2020"
 output: 
   html_document: 
     theme: spacelab
@@ -67,17 +67,19 @@ Your inital parameterized PVA will consist of:
 
 Your final written paper is expected to be in the style of a **scientific manuscript**. That is, it should have an *introduction*, *methods*, *results* and *discussion* sections, and should cite relevant literature. 
 
-### Introduction
-This is where you introduce the topic and describe why it's important. You can recycle and flesh out the material from your proposal! 
+**There are no formatting guidelines or page limits**. Please be as concise as possible while still covering all the key elements in the rubric. You can use any standard format for your references, all we ask is that you be consistent!
 
-Remember to cite literature here!
+### Introduction
+This is where you introduce the topic and describe why it's important. You should also include your research questions here, along with any hypotheses that you are testing. You can recycle and flesh out the material from your proposal! This should be at least a 2-3 paragraphs.
+
+Remember to cite literature here (and use a consistent format)!
 
 ### Methods
 This is where you describe your PVA in enough detail that it *could be replicated* by another wildlife researcher! You can recycle much of your "initial PVA" assignment here.
 
 Remember to justify all your decisions in terms of parameterization. 
 
-Also, you should describe how you addressed your main questions
+Also, you should describe how you addressed the research questions you introduced in the introduction section (above)
 
 - What different scenarios did you run?    
 
@@ -86,7 +88,7 @@ Also, you should describe how you addressed your main questions
     - Did you perform any statistical analyses?      
 
 ### Results
-This is where you describe and present the relevant outputs from your model. Provide figures and tables to summarize your *relevant* results. 
+This is where you describe and present the relevant outputs from your model (mostly can be recycled from your 'final PVA' assignment). Provide figures and tables to summarize your *relevant* results. You should include at least 2-3 figures as part of your results section. Each figure should have an informative caption placed directly below the figure. 
 
 With PVA it can be difficult to decide what to present and what not to present. Always ask yourself: is it *relevant* to your main questions?
 
@@ -104,7 +106,7 @@ A rubric for the final written presentation can be found [here](WrittenProject_r
 
 ## Fourth project-related assignment: the oral presentation!
 
-Your group presentation should be in the style of an oral presentation at a conference. 
+Your group presentation should be in the style of an oral presentation at a conference. See below for guidance on giving a good oral presenation! 
 
 Presentations will take place during our final two lab periods. 
 
@@ -177,7 +179,7 @@ Note: please don't use fancy backgrounds- keep your slides as clean as possible.
 
 - Cite previous research as you set up your research question. Convince us that your research fills a key knowledge gap. What is the overall context of your research? 
 
-- After you have framed the problem, clearly state your research questions!
+- After you have framed the problem, *clearly state your research questions*!
 
 #### Methods
 
@@ -207,6 +209,8 @@ Note: please don't use fancy backgrounds- keep your slides as clean as possible.
 #### Acknoweldgements   
 
 - Your final slide should acknowledge people who helped you with your project but who are not listed as a co-author.
+
+
 
 
 
