--- a/LECTURE18.Rmd
+++ b/LECTURE18.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Final class review"
 author: "NRES 470/670"
-date: "Spring 2019"
+date: "Spring 2020"
 output: 
   html_document: 
     theme: spacelab
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 ### Upcoming final exam
 
-**when and where** The final exam is coming up on **May 14** (9:50am to 11:50 in our regular classroom). You will have the whole two hour period to take the exam (but you should not need the whole period). 
+**when and where** The final exam is coming up on Friday **May 8** (9:50am to 11:50 in our regular classroom). You will have the whole two hour period to take the exam (but you should not need the whole period). 
 
 **what** The exam will cover all material covered in lectures and lab.
 
@@ -42,22 +42,20 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 #### Presentations
 
-- GREAT JOB!!!
-- Please send me a copy of your final project presentation PowerPoint (upload to WebCampus)
+- Please send me a copy of your final project presentation PowerPoint or Google slides if you haven't already (upload to WebCampus)
 
 #### Final papers
 
-- Should all have received written feedback (or will very soon!)
+- Should receive written feedback by Friday May 1.
 
 #### Extra credit
 
 - Will accept up to four extra credit write-ups (two presentations and two papers) 
-- Due when final papers are due (May 15).
+- Due when final papers are due (May 13).
 
 #### Office hours/Study session
 
-- Thursday 5/9 at 10:30am in our regular classroom
-- Danielle will lead another review session on Monday at 4pm
+- Wed 5/6 at 4pm via zoom
 
 #### DISCUSSION: Modeling in the bigger context
 
