--- a/LECTURE18.Rmd
+++ b/LECTURE18.Rmd
@@ -46,7 +46,7 @@ knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 
 #### Final papers
 
-- Should receive written feedback by Friday May 1.
+- Should receive written feedback by the end of the day on Friday May 1.
 
 #### Extra credit
 
